--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -33,6 +33,24 @@ html {
 .grid__row {
     display: flex;
     flex-wrap: wrap;
+    margin-left: -5px;
+    margin-right: -5px;
+}
+.grid__column-2{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 16.67%;
+}
+.grid__column-2-4{
+   
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 20%;
+}
+.grid__column-10{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 81.334%;
 }
 @keyframes fadeIn{
     from{
@@ -51,7 +69,8 @@ html {
     }
 }
 .btn{
-    min-width: 142px;
+    background-color: var(--white-color);
+    min-width: 124px;
     height: 36px;
     font-weight: 600;
     text-decoration: none;
@@ -59,10 +78,12 @@ html {
     border-radius: 2px;
     font-size: 1.5rem;
     padding: 0 12px;
+    outline: none;
     cursor: pointer;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
+    line-height: 1.6rem;
 }
 .btn.btn--normal:hover{
     background-color: rgba(0, 0, 0, 0.2);
@@ -81,4 +102,85 @@ html {
     cursor: default;
     background-color: #999;
 }
+.select-input{
+    position: relative;
+    font-weight: 600;
+    min-width: 200px;
+    height: 34px;
+    padding: 0 12px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.4rem;
+}
+.select-input__label{
+    font-size: 1.4rem;
+}
+.select-input__icon{
+    font-size: 1.4rem;
+    color: rgb(131, 131, 131);
+    position: relative;
+    top: 1px;
+    cursor: pointer;
+}
+.select-input:hover
+.select-input__list{
+    display: block;
+}
+.select-input__list{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 20px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    padding: 10px 16px;
+    list-style: none;
+    display: none;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+}
+.select-input__link{
+    display: block;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    text-decoration: none;
+    padding: 4px 0;
+}
+.select-input__link:hover{
+    color: orangered;
+    cursor: pointer;
 
+}
+.pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+.pagination-item{
+    margin: 0 12px;
+    
+}
+.pagination-item__link{
+    
+    display: block;
+    text-decoration: none;
+    font-size: 1.8rem;
+    color: var(--text-color);
+    min-width: 40px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+}
+.pagination-item__icon{
+
+}
+.pagination-item--active .pagination-item__link{
+    background-color: orangered;
+    color: var(--white-color);
+}
+.pagination-item--active .pagination-item__link:hover{
+    background-color: rgb(250, 116, 67);
+}
