--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,12 +12,88 @@
     list-style: none;
     padding-left: 0;
     margin: 4px 0 0 0;
+    display: flex;
+
 }
 
 .header__navbar-item{
     margin: 0 8px;
     position: relative;
     min-height: 26px;
+}
+.header__navbar-user{
+    display: flex;
+    justify-items: center;
+    position: relative;
+}
+.header__navbar-user-item--seperate{
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.header__navbar-user-img{
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
+.header__navbar-user-name{
+    margin-left: 8px;
+    font-size: 1.4rem;
+    
+}
+.header__navbar-user:hover
+.header__navbar-user-menu{
+    display: block;
+}
+.header__navbar-user-menu{
+    position: absolute;
+    z-index: 1;
+    padding-left: 0 ;
+    top: calc(100% + 4px);
+    width: 160px;
+    right: 0;
+    background-color: var(--white-color);
+    border-radius: 2px;
+    list-style: none;
+    box-shadow: 0 1px 3.125rem 0 rgba(0, 0, 0, 0.2);
+    display: none;
+}
+.header__navbar-user-menu::before{
+    content: "";
+    border-width: 20px 30px;
+    border-style: solid;
+    border-color: transparent transparent var(--white-color) transparent;
+    position: absolute;
+    right: 12px;
+    top: -30px;
+}
+.header__navbar-user-menu::after{
+    content: "";
+    display: block;
+    position: absolute;
+    top: -8px;
+    right: 0;
+    width: 54%;
+    height: 8px;
+    
+}
+
+.header__navbar-user-item a{
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    padding: 6px 16px;
+    display: block;
+}
+.header__navbar-user-item:first-child{
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+.header__navbar-user-item:last-child{
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+.header__navbar-user-item a:hover{
+    background-color: #FAFAFA;
 }
 .header__notify{
     display: block;
@@ -79,6 +155,7 @@
     color: var(--white-color);
 }
 .header__qr{
+    z-index: 1;
     background-color: var(--white-color);
     width: 186px;
     position: absolute;
@@ -88,6 +165,7 @@
     border-radius: 2px;
     display: none;
     animation: fadeIn ease-in 0.3s;
+    box-shadow:  0 1px 2px rgba(0, 0, 0, .5);
 }
 .header__qr::before{
     content: "";
@@ -117,6 +195,7 @@
 }
 /* HEADER NOTIFICATION */
 .header__notify{
+    z-index: 1;
     position: absolute;
     top: 118%;
     right: 0;
@@ -171,7 +250,7 @@
 }
 .header__notify-list{
     padding-left: 0;
-
+    
 }
 .header__notify-item{
     display: flex;
@@ -272,9 +351,7 @@
     font-weight: 600;
     cursor: pointer;
 }
-.auth-form__form{
-    
-}
+
 .auth-form__input{
     width: 100%;
     height: 40px;
@@ -363,6 +440,7 @@
     height: var( --header-with-search-height);
     display: flex;
     align-items: center;
+    margin: 0 8px;
 }
 .header__logo{
     width: 200px;
@@ -375,13 +453,680 @@
     height: 40px;
     background: var(--white-color);
     border-radius: 2px;
+    display: flex;
+    align-items: center;
 }
 .header__cart{
     width: 150px;
     text-align: center;
+    
+}
+.header__cart-heading{
+    text-align: left;
+    margin: 8px 0 8px 12px;
+    font-size: 1.5rem;
+    color: #999;
+}
+
+.header__cart-list-item{
+    padding-left: 0;
+    list-style: none;
+    height: 25vh;
+    overflow-y: auto;
+}
+
+.header__cart-item{
+    display: flex;
+    align-items: center;
+}
+.header__cart-item:hover{
+    background-color:#F8F8F8 ;
+}
+.header__cart-view-cart{
+    float: right;
+    margin: 0 12px 12px 0;
+}
+.header__cart-view-cart:hover{
+    background-color: #F05D41;
+}
+.header__cart-img{
+    width: 42px;
+    height: 42px;
+    margin: 12px;
+    border: 1px solid var(--border-color);
+}
+
+.header__cart-item-info{
+    width: 100%;
+    margin-right:12px ;
+}
+
+.header__cart-item-head{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header__cart-item-name{
+    line-height: 2rem;
+    height: 4rem;
+    overflow: hidden;
+    font-size: 1.4rem;
+    font-weight: 600;
+    margin: 0;
+    padding-right:16px ;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp:2 ;
+    text-align: left; 
+}
+
+.header__cart-item-price{
+    font-size: 1.4rem;
+    color: orangered;
+    font-weight: 600;
+}
+
+.header__cart-item-multiply{
+    font-size: 1rem;
+    margin: 0 4px;
+    color: #757575;
+}
+
+.header__cart-item-qnt{
+    font-size: 1.4rem;
+    color: #666565;
+    font-weight: 500;
+}
+
+.header__cart-item-body{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 4px;
+}
+
+.header__cart-item-description{
+    color: #757575;
+    font-size: 1.3rem;
+    font-weight: 400;
+}
+
+.header__cart-item-remove{
+    color: black;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+.header__cart-item-remove:hover{
+    color: orangered;
+    cursor: pointer;
+}
+.header__cart-list::after{
+    content: "";
+    position: absolute;
+    right: 4px;
+    top: -30px;
+    border-width: 20px 30px;
+    border-style: solid;
+    border-color:transparent transparent var(--white-color) transparent ;
+}
+.header__cart-wrap{
+    position: relative;
+    display: inline-block;
+    padding: 2px 8px;
+    cursor: pointer;
 }
 .header__cart-icon{
     font-size: 2.4rem;
     color: var(--white-color);
     margin-top: 4px;
+}
+.header__cart:hover .header__cart-list{
+    display: block;
+}
+.header__cart-list{
+    position: absolute;
+    top: calc(100% + 10px);
+    right: -14px;
+    background-color:var(--white-color) ;
+    width: 410px;
+    border-radius: 2px;
+    box-shadow: 0 1px 3.125rem 0 rgba(0, 0, 0, 0.2);
+    display: none;
+    animation: fadeIn ease 0.3s;
+    cursor: default;
+    z-index: 1;
+}
+.header__cart-list-no-cart{
+    padding: 24px 0;
+}
+.header__cart-list-no-cart .header__cart-no-cart-img{
+    display: block;
+    margin: 0 auto;
+}
+
+.header__cart-no-cart-img{
+    width: 50%;
+    display: none;
+}
+.header__cart-notice{
+    position: absolute;
+    padding: 1px 5px;
+    font-size: 1.4rem;
+    background-color:var(--white-color) ;
+    color: orangered;
+    line-height: 1.4rem;
+    border-radius: 10px;
+    border: 2px solid #f03c18;
+    top: -4px;
+    right: -6px;
+}
+.header__search-input{
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 1.4rem;
+    color: #000;
+    padding: 0 16px;
+    border-radius: 3px;
+}
+.header__search-input-wrap{
+    flex: 1;
+    height: 100%;
+    position: relative;
+}
+.header__search-select{
+    border-left: 1px solid #ccc;
+    padding-left: 16px;
+    position: relative;
+    cursor: pointer;
+}
+.header__search-select:hover
+.header__search-option{
+    display: block;
+}
+.select-input__list{
+    z-index: 1;
+}
+
+.header__search-select-icon{
+    font-size: 1.2rem;
+    color: #4A4A4A ;
+    margin: 0 12px;
+    position: relative;
+}
+
+.header__search-select-label{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    font-weight: 600;
+}
+.header__search-btn{
+    background-color: orangered;
+    border: none;
+    height: 34px;
+    width: 60px;
+    border-radius: 3px;
+    margin-right: 3px;
+    outline: none;
+}
+.header__search-btn:hover{
+    background-color: #f07259;
+    cursor: pointer;
+}
+.header__search-btn-icon{
+    font-size: 1.6rem;
+    color: var(--white-color);
+}
+.header__search-option{
+    width: 126px;
+    position: absolute;
+    right: 0;
+    top: 100%;
+    list-style: none;
+    box-shadow: 0 0 3px #666;
+    padding-left: 0;
+    border-radius: 3px;
+    z-index: 1;
+    display: none;
+}
+.header__search-option::after{
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 10px;
+    top:-10px;
+}
+.header__search-option-item{
+    background-color: var(--white-color);
+    padding: 8px 8px;
+    
+}
+.header__search-option-item:hover {
+    background-color: #fafafa;
+    cursor: pointer;
+}
+.header__search-option-item span{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    font-weight: 700;
+    margin-left: 10px;
+}
+.header__search-option-item i {
+    font-size: 1.2rem;
+    color: orangered ;
+    margin-left: 12px;
+    display: none;
+}
+.header__search-option-item--active i{
+    display: inline-block;
+}
+.header__search-input:focus ~ .header__search-history{
+    display: block;
+}
+.header__search-history{
+    position: absolute;
+    top: 100% ;
+    left: 0;
+    width: calc(100% - 16px);
+    background-color: var(--white-color);
+    border-radius: 3px;
+    box-shadow: 0 0 3px #666;
+    display: none;
+    overflow: hidden;
+    z-index: 1;
+}
+.header__search-history-heading{
+    margin: 6px 12px;
+    font-size: 1.4rem;
+    color: #999;
+    font-weight: 600;
+}
+.header__search-history-list{
+    padding-left: 0;
+    list-style: none;
+    margin-bottom: 6px 0 0;
+}
+.header__search-history-item{
+    height: 38px;
+    padding: 0 12px;
+    
+}
+/* .header__search-history-item:last-child{
+    border-bottom-left-radius:3px ;
+    border-bottom-right-radius:3px ;
+} */
+.header__search-history-item:hover{
+    background-color: #fafafa;
+    cursor: pointer;
+}
+.header__search-history-item a {
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    font-weight: 800;
+   line-height: 38px;
+}
+.app__contaniner{
+    background-color: #F5F5F5;
+}
+.app_content{
+    padding-top: 36px;
+}
+.category{
+    background-color: var(--white-color);
+    border-radius: 2px;
+
+}
+.category__heading{
+    padding: 12px 16px 0;
+    margin-top: 0;
+    color: var(--text-color);
+    font-size: 1.8rem;
+    font-weight: 600;
+   text-transform: uppercase;
+}
+/* .category__heading-icon{
+    font-size: 1.5rem;
+    margin-right: 4px;
+} */
+.category-list{
+    padding:0 0 8px 0;
+    list-style: none;
+    
+}
+.category-item{
+    position: relative;
+}
+.category-item:first-child::before{
+    display: none;
+}
+.category-item::before{
+    content: "";
+    border-top: 1px solid #e1e1e1;
+    left: 20px;
+    right: 20px;
+    position: absolute;
+    top: 0;
+    
+}
+.category-item--active .category-item__link{
+    color: crimson;
+
+}
+/* .category-item--active .category-item__link::before{
+    content: "";
+    top: 50%;
+    left: 6px;
+    transform:translateY(calc(-50%));
+    position: absolute;
+    border: 4px solid;
+    border-color: transparent transparent transparent crimson;
+} */
+.category-item__link{
+    position: relative;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    text-decoration: none;
+    padding: 10px 20px;
+    display: block;
+    right: 0;
+    transition:right linear 0.1s ;
+}
+.category-item__link:hover{
+    color: crimson;
+    right: -4px;
+}
+.home-filter{
+    background-color: rgba(0, 0, 0, 0.04);
+    display: flex;
+    align-items: center;
+    padding: 12px 22px;
+    border-radius: 2px;
+}
+.home-filter__page{
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+.home-filter__label{
+    margin-right: 16px;
+    font-size: 1.4rem;
+    color: #555555;
+}
+.home-filter__btn{
+    min-width:90px ;
+    margin-right: 12px;
+    border-radius: 2px;
+}
+.home-filter__page-num{
+    font-weight: 600;
+    font-size: 1.5rem;
+    color: var(--text-color);
+    margin-right: 22px;
+}
+.home-filter__page-current{
+    color: orangered;
+}
+.home-filter__page-control{
+    border-radius: 2px;
+    overflow: hidden;
+    display: flex;
+    width: 72px;
+    height: 36px;
+}
+.home-filter__page-btn{
+    display: flex;
+    flex: 1;
+    background-color: var(--white-color);
+    text-decoration: none;
+}
+.home-filter__page-btn--disabled{
+    background-color: #f9f9f9 ;
+    cursor: default;
+}
+.home-filter__page-btn--disabled .home-filter__page-icon{
+    color: #ccc;
+}
+.home-filter__page-btn:first-child{
+    border-right: 1px solid #eee;
+}
+.home-filter__page-icon{
+    color: #555;
+    margin: auto;
+    font-size: 1.6rem;
+}
+/* PRODUCTION */
+.home-product{
+    margin-bottom: 10px;
+}
+.home-product-item{
+    display: block;
+    text-decoration: none;
+    position: relative;
+    margin-top: 10px;
+    background-color: #fff;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    box-shadow: 0 0.1rem 0.2rem 0 rgba(0, 0, 0, .1);
+    transition: transform linear 0.1s;
+    will-change: transform;
+}
+.home-product-item-wrapper{
+    margin-bottom: 10px;
+}
+.home-product-item:hover{
+    transform:translateY(-2px);
+    box-shadow: 0 1px 20px 0 rgba(0, 0, 0, .05);
+}
+.home-product-item__img{
+     padding-top:100% ;
+     background-repeat: no-repeat;
+     background-size: cover;
+     background-position: center;
+}
+.home-product-item__name{
+     font-size: 1.4rem;
+     font-weight: 400;
+     color: var(--text-color);
+     line-height: 1.8rem;
+     height: 2rem;
+     margin: 10px ;
+     overflow: hidden;
+     display: block;
+     display: -webkit-box;
+     -webkit-box-orient: vertical ;
+     -webkit-line-clamp: 2;
+     text-overflow: ellipsis;
+     white-space: nowrap;
+}
+.home-product-item__price{
+     display: flex;
+     justify-content: baseline;
+     flex-wrap: wrap;
+}
+.home-product-item__price-old{
+    font-size: 1.4rem;
+    color: #666;
+    text-decoration: line-through;
+    margin-left: 10px;
+}
+.home-product-item__price-current{
+    font-size: 1.6rem;
+    color: orangered;
+    margin-left: 6px;
+}
+.home-product-item__action{
+    display: flex;
+    justify-content: space-between;
+    margin: 6px 10px 0;
+}
+.home-product-item__like{
+
+}
+i.home-product-item__like-icon-fill{
+    display: none;
+}
+.home-product-item__like--liked .home-product-item__like-icon-fill{
+    color: #f63d30;
+    display: inline-block;
+}
+.home-product-item__like--liked .home-product-item__like-icon-empty{
+    display: none;
+}
+.home-product-item__rating{
+    font-size: 1rem;
+    transform: scale(0.8);
+    transform-origin: right;
+    color: #d5d5d5;
+    margin:-1px 0 0 auto;
+
+}
+.home-product-item__star--gold{
+    color: gold;
+}
+.home-product-item__sold{
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: var(--text-color);
+    margin-left: 6px;
+}
+.home-product-item__origin{
+    color: #595959;
+    display: flex;
+    margin:3px 10px 4px;
+    padding-bottom: 6px;
+    
+}
+.home-product-item__brand{
+
+}
+.home-product-item__origin-name{
+    margin-left: auto;
+}
+.home-product-item__favourite{
+    font-weight: 600;
+    position: absolute;
+    font-size: 1.2rem;
+    top: 10px;
+    left: -4px;
+    background-color: currentColor;
+    color: orangered;
+    line-height: 1.6rem;
+    padding-right: 6px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius:3px ;
+}
+.home-product-item__favourite i{
+    color: var(--white-color);
+    font-size: 0.9rem;
+    margin: 0 2px 0 5px;
+}
+
+.home-product-item__favourite span{
+
+    color: var(--white-color);
+}
+.home-product-item__favourite::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    border-top: 4px solid currentColor;
+    border-left: 4px solid transparent;
+    filter: brightness(60%);
+}
+.home-product-item__sell-off{
+    position: absolute;
+    right: 0;
+    padding-top: 4px;
+    top: 0;
+    width: 40px;
+    height: 36px;
+    text-align: center;
+    background-color: rgba(255, 216, 64, 0.94);
+}
+.home-product-item__sell-off::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    border-width: 0 20px 6px;
+    border-style: solid;
+    border-color:transparent rgba(255, 216, 64, 0.94) transparent rgba(255, 216, 64, 0.94) ;
+}
+.home-product-item__sell-off-percent{
+    color: #ee4d2d;
+    font-weight:800;
+    font-size: 1.4rem;
+    line-height: 1.3rem;
+}
+.home-product-item__sell-off-label{
+    color: var(--white-color);
+    font-size: 1.4rem;
+    line-height: 1.3rem;
+    font-size: 1.4rem;
+    font-weight: 900;
+}
+.home-product__pagination{
+   margin: 50px 0 30px 0;
+}
+.footer{
+    border-top: 4px solid orangered;
+    background: var(--white-color);
+}
+.footer__heading{
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    color: var(--text-color);
+}
+.footer__list{
+    list-style: none;
+    padding-left: 0;
+}
+.footer-item__link{ 
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: #666;
+    padding: 4px 0;
+}
+.footer-item__link:hover{
+    color: orangered;
+    
+}
+.footer-item__icon{
+    font-size: 1.8rem;
+    margin: -1px 8px 0 0;
+}
+.footer__download{
+    display: flex;
+}
+.footer__download-qr{
+    width: 80px;
+    height: 80px;
+    border: 1px solid ;
+}
+.footer__download-apps{
+    flex: 1;
+    margin-left: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.footer__download-app-img{
+    height: 16px;
+}
+.footer__bottom{
+    display: flex;
+    padding: 24px 0;
+    background-color: #f5f5f5;
+    justify-content: center;
+}
+.footer__text{
+    margin: 0;
+    font-size: 1.4rem;
+    
 }
